[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-sdk"
version = "0.1.0"
description = "Python SDK for agent-runtime — invoke declarative agent workflows from Python"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["agent_runtime*"]

[tool.setuptools.package-data]
agent_runtime = ["bin/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
