[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lp-agent-runtime-sdk"
version = "0.1.11"
description = "Python SDK for agent-runtime — invoke declarative agent workflows from Python"
readme = "README.md"
license = "Apache-2.0"
authors = [
  {name = "Aditya Vinodh Arjun", email = "aditya.vinodh@levelplane.ai"},
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/levelplaneai/agent-runtime-python"
Repository = "https://github.com/levelplaneai/agent-runtime-python"
Issues = "https://github.com/levelplaneai/agent-runtime-python/issues"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["agent_runtime*"]

[tool.setuptools.package-data]
agent_runtime = ["bin/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.agent-runtime]
binary-version = "v0.1.9"

[tool.ruff]
target-version = "py310"
